--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-chakra-ui-typescript",
+  "name": "covi-find",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,15 +7,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.5",
+    "@chakra-ui/icons": "^1.0.12",
     "@chakra-ui/react": "^1.4.2",
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "@react-google-maps/api": "^2.1.1",
+    "axios": "^0.21.1",
     "framer-motion": "^4.0.3",
+    "google-maps-react": "^2.0.6",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
