--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "axios": "^0.21.1",
     "framer-motion": "^4.0.3",
     "google-maps-react": "^2.0.6",
+    "leaflet": "^1.7.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "swr": "^0.5.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
