--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
-    "@react-google-maps/api": "^2.1.1",
     "axios": "^0.21.1",
     "framer-motion": "^4.0.3",
-    "google-maps-react": "^2.0.6",
     "leaflet": "^1.7.1",
     "next": "latest",
+    "next-pwa": "^5.2.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
