--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
+    "react-share": "^4.4.0",
     "swr": "^0.5.5"
   },
   "devDependencies": {
