--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
     "react-share": "^4.4.0",
+    "react-table": "^7.7.0",
     "swr": "^0.5.5"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/node": "^14.6.0",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-table": "^7.7.0",
     "typescript": "4.2.3"
   },
   "license": "MIT"
