--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^3.1.0",
     "react-share": "^4.4.0",
     "react-table": "^7.7.0",
+    "react-timeago": "^5.2.0",
     "swr": "^0.5.5"
   },
   "devDependencies": {
